# wanikaniStats

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: data_processing.rs  lib.rs  main.rs
src/data_processing/: api_client.rs  complete_user_info.rs  wanikani_data.rs
templates/: base.jinja  info.jinja  login.jinja
