[package]
name = "wanikani_stats"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"]}
axum-extra = { version = "0.10.0", features=["cookie"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
governor = { version = "0.8.1" }
minijinja = "2.7.0"
moka = { version = "0.12.10", features = ["future"] }
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4"] }
